--- a/css/default.css
+++ b/css/default.css
@@ -4148,6 +4148,30 @@ body.index-directory #footer {
     width: calc(var(--popup-title-bar-button-size) - 8px);
 }
 
+/*┌─────────────────┐*/
+/*│ Popup metadata. │*/
+/*└─────────────────┘*/
+
+.popup .partial-annotation-info-link-container {
+	position: absolute;
+	top: calc(var(--popup-title-bar-height) + 4px);
+	right: 18px;
+	background-color: var(--GW-body-background-color);
+	border-radius: 50%;
+}
+.popup .partial-annotation-info-link-container a {
+	display: block;
+	box-sizing: border-box;
+	width: 1.25em;
+	display: flex;
+	justify-content: center;
+	color: var(--GW-popups-popup-title-bar-button-color);
+}
+.popup .partial-annotation-info-link-container a svg {
+	display: block;
+	max-height: 100%;
+}
+
 /*┌────────────────────┐*/
 /*│ Popup scroll view. │*/
 /*└────────────────────┘*/
