--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -2,7 +2,7 @@
 	<p class="data-field title <[IF authorDateAux]>author-date-aux<[IFEND]>">
 		<a 
 		   class="<{titleLinkClass}>"
-		   title="Open <{titleLinkHref}> in a new tab"
+		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
