--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -2,7 +2,7 @@
 	<p class="data-field title">
 		<a 
 		   class="<{titleLinkClass}>"
-		   title="Open <{titleLinkHref}> in a new tab"
+		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
