Fix styling aberration in page headers with italics

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -586,6 +586,11 @@ header h1 {
     }
 }
 
+/*	Source Serif Pro has no italic small caps, sadly.
+ */
+header h1 em {
+	font-variant: normal;
+}
 
 /***********************/
 /* PAGE METADATA BLOCK */
