--- a/template/default.html
+++ b/template/default.html
@@ -153,7 +153,7 @@
 
           <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
 
-          <a class="include include-spinner-not icon-not" href="/metadata/today-link.html">[Site Of The Day]</a>
+          <a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
         </div>
 
         <!-- NOTE: need to re-enable .markdownBody so the annotation gets fully-styled/enabled, while being centered & full-sized (rather than squashed in a column). -->
