--- a/template/include/pop-frame-title-standard.tmpl
+++ b/template/include/pop-frame-title-standard.tmpl
@@ -1,6 +1,6 @@
 <a
 	class="popframe-title-link"
-	href="<{titleLinkHref}>"
-	title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
+	href="<{popFrameTitleLinkHref}>"
+	title="Open <{popFrameTitleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
 	target="<{linkTarget}>"
 		><{popFrameTitleText}></a>
