Remove another outdated prefixed CSS property value

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -287,7 +287,6 @@ header h1 em {
  */
 #page-description p {
     -webkit-hyphens: auto;
-    -ms-hyphens: auto;
     hyphens: auto;
 }
 #page-description em {
@@ -306,6 +305,7 @@ header h1 em {
 
 #page-metadata > .link-tags,
 #page-metadata-block {
+	-webkit-hyphens: none;
     hyphens: none;
 }
 
@@ -335,6 +335,7 @@ header h1 em {
     }
     #page-description {
         margin: 0 auto 0.75em auto;
+        -webkit-hyphens: none;
         hyphens: none;
     }
     #page-metadata-block,
@@ -922,7 +923,6 @@ section#see-also:only-of-type > h1:first-child a {
 .markdownBody p,
 .markdownBody li {
     -webkit-hyphens: auto;
-    -ms-hyphens: auto;
     hyphens: auto;
 }
 @media all and (min-width: 900px) {
@@ -938,7 +938,6 @@ section#see-also:only-of-type > h1:first-child a {
 body.justified-not .markdownBody p,
 body.justified-not .markdownBody li {
     -webkit-hyphens: none;
-    -ms-hyphens: none;
     hyphens: none;
 }
 @media all and (min-width: 900px) {
