--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -613,7 +613,6 @@ header h1 em {
  */
 #page-description p {
     -webkit-hyphens: auto;
-    -ms-hyphens: auto;
     hyphens: auto;
 }
 #page-description em {
@@ -632,6 +631,7 @@ header h1 em {
 
 #page-metadata > .link-tags,
 #page-metadata-block {
+	-webkit-hyphens: none;
     hyphens: none;
 }
 
@@ -661,6 +661,7 @@ header h1 em {
     }
     #page-description {
         margin: 0 auto 0.75em auto;
+        -webkit-hyphens: none;
         hyphens: none;
     }
     #page-metadata-block,
@@ -1248,7 +1249,6 @@ section#see-also:only-of-type > h1:first-child a {
 .markdownBody p,
 .markdownBody li {
     -webkit-hyphens: auto;
-    -ms-hyphens: auto;
     hyphens: auto;
 }
 @media all and (min-width: 900px) {
@@ -1264,7 +1264,6 @@ section#see-also:only-of-type > h1:first-child a {
 body.justified-not .markdownBody p,
 body.justified-not .markdownBody li {
     -webkit-hyphens: none;
-    -ms-hyphens: none;
     hyphens: none;
 }
 @media all and (min-width: 900px) {
