--- a/template/default.html
+++ b/template/default.html
@@ -147,7 +147,7 @@
             ><svg><use href="/static/img/icon/sequential-nav-icons-arabesque.svg#direction" /></svg></a>
         </nav>
 
-        <div id="footer">
+        <div class="markdownBody" id="footer">
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback">[Submit Anonymous Feedback]</a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
